{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5c98952c-8ac3-4468-89b6-d96a9d0ee6b2",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "9c250449-e2de-442b-b34c-2d73744d6a7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "da14ce24-7c0d-4621-a93d-0a8059900889",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "f71c2116-cd48-460e-a79d-f968f8bdf61c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "0e7141c3-4b14-4331-9c01-ea0cc02350f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "f0ec4f83-b44a-4620-91e7-d3504f3c6fa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "90a77fdb-44cf-44a5-bad8-69d575fda307",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "745a5973-e2c3-4654-8e75-95faa56bc3ec",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abe00ef7-b0f0-4a32-8d43-c45c5c6eba26",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fce8e628-888e-4270-a792-fa18b9e5b170",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd9237b4-eec1-48ca-97f4-812db6e01aa9",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c7dfe93-f18a-4eda-9815-250e30d49e8e",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16125ba3-f411-4265-ab61-2fa394dbfdbe",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}